--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ find_package(OpenGL REQUIRED)
 include(GNUInstallDirs)
 
 # Define ImGui-SFML
-add_library(ImGui-SFML imgui-SFML.cpp ${IMGUI_SOURCES})
+add_library(ImGui-SFML imgui-SFML.cpp imgui-knobs.cpp ${IMGUI_SOURCES})
 add_library(ImGui-SFML::ImGui-SFML ALIAS ImGui-SFML)
 target_include_directories(ImGui-SFML PUBLIC
   $<BUILD_INTERFACE:${IMGUI_INCLUDE_DIR}>
@@ -114,6 +114,7 @@ target_compile_definitions(ImGui-SFML PUBLIC IMGUI_USER_CONFIG="${IMGUI_SFML_CON
 # Collect public headers
 set(IMGUI_SFML_PUBLIC_HEADERS
   ${PROJECT_SOURCE_DIR}/imgui-SFML.h
+  ${PROJECT_SOURCE_DIR}/imgui-knobs.h
   ${PROJECT_SOURCE_DIR}/imgui-SFML_export.h
   ${IMGUI_PUBLIC_HEADERS}
 )
